# rtxi-hmmGenerator

./: .gitignore  CMakeLists.txt
cmake/Modules/: FindRTXI.cmake  RTXI.cmake  hmm.cmake
include/: hmmFuns.cpp  hmm_generator.h
scripts/: generate-lib-sourcelist.sh
src/: CMakeLists.txt  hmm_generator.cpp  sourcelist.txt
